--- a/src/containers/Input/inputs.css
+++ b/src/containers/Input/inputs.css
@@ -16,3 +16,16 @@ h3 {
 input {
   outline: none;
 }
+
+@media only screen and (max-width: 768px) {
+  .inputts {
+    width: 100%;
+    padding-right: 20px;
+  }
+  .main-inputs-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 5px;
+  }
+}
